path and url for register_user view added

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% include "messages.html" %}
 
-<form method="post" action="">
+<form method="post" action="{% url 'register_user'%}">
     {% csrf_token %}
     <input type="email" placeholder="Enter email" > <br>
     <input type="first_name" placeholder="Enter first_name" > <br> 
