--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,8 +2,9 @@
 
 <form method="post" action="{% url 'register_user'%}">
     {% csrf_token %}
-    <input type="email" placeholder="Enter email" > <br>
-    <input type="first_name" placeholder="Enter first_name" > <br> 
-    <input type="last_name" placeholder="Enter last_name" > <br>
+    {{msg}}
+    <input type="email" name="email" placeholder="Enter email" > <br>
+    <input type="text" name="first_name" placeholder="Enter first_name" > <br> 
+    <input type="text" name="last_name" placeholder="Enter last_name" > <br>
     <input type="submit" value="submit">
 </form>
