--- a/templates/accounts/set_password.html
+++ b/templates/accounts/set_password.html
@@ -3,6 +3,6 @@
     {% csrf_token %}
 
     <input type="password" name="password"> <br>
-    <input type="password" name="conform_password"> <br>
+    <input type="password" name="confirm_password"> <br>
     <input type="submit" value="submit">
 </form>
