--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,4 @@
-<form>
+<form method="post" action="{% url 'login' %}">
     {{msg}}
     {% csrf_token %}
     <input type="email" name="email" placeholder="enter email"><br>
